# multimodal-toxicity

./: .gitignore  README.md  main.py  pyproject.toml  run_clip_eval.py  run_clip_training.py  run_description_gen.py  run_eval.py  run_eval_on_all.py  run_vbert_eval.py  run_vbert_training.py
CLIP/: clip_classifier.py  datamodule.py  dataset.py  main.py  train_eval.py  train_log.txt
VisualBERT/: MMHS150K.py  VBERTClassifier.py  utils.py  vbert.py
commands/: __init__.py  eval_all.py  eval_blip2.py  eval_blip2_align.py  eval_clip.py  eval_clip_align.py  eval_utils.py  eval_vbert.py  eval_vilt.py  generate_captions.py  train_blip2.py  train_blip2_align.py  train_clip.py  train_clip_align.py  train_metadata.py  train_vbert.py  train_vilt.py
core/: captions.py  criteria.py  eval.py  io.py  logs.py  train.py
dataset/: datamodule.py  dataset.py  descriptor.py
models/: align_fusion.py  blip2_align_fusion_classifier.py  blip2_classifier.py  caption_encoder.py  clip_align_fusion_classifier.py  clip_classifier.py  vbert_classifier.py  vilt_classifier.py
reports/: project_implementation_overview.md
scripts/: build_aggregated_dataset.py  build_mmhs150k_clean.py  plot_hateful_memes_overlaps.py  start_llama_server.sh
tests/: test_aggregation_policy.py  test_aggregation_safety.py  test_caption_fusion_models.py  test_captions.py  test_checkpoint_io.py  test_cli.py  test_command_wiring.py  test_dataset_real_data.py  test_dataset_source_filtering.py  test_dataset_synthetic.py  test_eval_utils.py  test_main_dispatch.py  test_metrics.py  test_training_safety.py
