[project]
name = "multimodal-toxicity"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "transformers>=4.57.0",
    "tqdm",
    "scikit-learn",
    "open-clip-torch>=3.3.0",
]

[project.optional-dependencies]
captions = []
analysis = [
    "matplotlib",
    "numpy",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "ckpt",
    "data",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "data: tests that read local datasets under data/",
    "random_data: opt-in randomized local dataset sampling",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
